fix text wrap

--- a/nfc-site/styles.css
+++ b/nfc-site/styles.css
@@ -20,12 +20,11 @@ html {
 }
 
 .user-entry {
-    white-space: pre;
+    white-space: pre-wrap;
     background: #fbf7f5;
     border-top: 4px solid rgb(60, 56, 80);
     padding: 15px;
     margin: 0px;
-    word-wrap: break-word;
 }
 
 .form-style-8{
